--- a/surveyForm/style.css
+++ b/surveyForm/style.css
@@ -5,6 +5,7 @@
 }
 
 .title-header {
+    text-align: center;
     font-family: Overpass, sans-serif;
     color: black;
 }
@@ -14,9 +15,61 @@ body {
 }
 
 .form-outline {
+    text-align: center;
     margin: 0 auto;
     background-color: whitesmoke;
     color: rgb(41, 41, 41);
     max-width: 900px;
     border-radius: 20px;
+}
+
+.labels {
+    display: inline-block;
+    text-align: right;
+    width: 40%;
+    padding: 5px;
+    vertical-align: top;
+    margin-top: 10px;
+}
+
+.rightTab {
+    display: inline-block;
+    text-align: left;
+    width: 48%;
+    vertical-align: middle;
+}
+
+.input-field {
+    height: 20px;
+    width: 280px;
+    padding: 5px;
+    margin: 10px;
+    border: 1px solid #c0c0c0;
+    border-radius: 2px;
+}
+
+.dropdown {
+    height: 35px;
+    width: 140px;
+    padding: 5px;
+    margin: 10px;
+    margin-top: 15px;
+    border: 1px solid #c0c0c0;
+    border-radius: 2px;
+}
+
+.radio, .checkbox {
+    position: relative;
+    left: -43px;
+    margin-left: 10px;
+    display: block;
+    padding-bottom: 10px;
+}
+
+.submit-btn {
+    margin: 20px;
+    padding: 8px 20px;
+    border-radius: 10px;
+    background-color: tomato;
+    color: white;
 }
