--- a/productLanding/productStyle.css
+++ b/productLanding/productStyle.css
@@ -1,51 +1,14 @@
-
-
-@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Sniglet');
 
 * {
   box-sizing: border-box;
-}
-
-.header-img {
-  width: 100px;
-  position: absolute;
-}
-
-.container {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.topnav ul {
-  display: inline;
-  list-style: none;
+  background-color: rgb(233, 233, 233);
+  font-size: 26px;
+  line-height: 1.2em;
   margin: 0;
-  padding: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.topnav li {
-  float: right;
-  margin-top: 1.5em;
-  font-size: 1.5em;
-  text-decoration: none;
-}
-
-.nav-link {
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
-  font-weight: bolder;
-}
-
-.nav-tab:hover {
-  background-color: slategrey;
-}
-
-.feature-container {
-  position: relative;
-}
-
-.feature-img {
-  width: 100px;
+.main-heading {
+  font-family: 'Sniglet', cursive;
 }
